# docs-to-blog

./: .env.example  .gitignore  .sync-state.json  HANDOFF.md  PLAN.md  README.md  astro.config.mjs  package.json  project.toml  pyproject.toml  tsconfig.json
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.github/workflows/: preflight.yml  sync.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
demo/: demo.css  demo.js  index.html
notes/: 2026-05-12-automation-execution-model.md  2026-05-12-gdoc-cli-capabilities.md  2026-05-12-gdoc-span-escaping.md  2026-05-12-gsd-handoff-prompt.md  2026-05-12-implementation-plan.md  2026-05-12-options-synthesis.md  2026-05-12-styling-override-architecture.md  2026-05-12-website-stack-survey.md
notes/comparison/: A-summary.md
styles/: anchors.yaml  generated.css  manual.css
sync/: __main__.py  anchors.py  config.py  css_gen.py  diff_review.py  fetch.py  llm.py  para_style_a.py
tests/: remark-anchors.test.ts  remark-spans.test.ts  test_anchors.py  test_css_gen_validators.py  test_diff_review_validators.py  test_fetch_unescape.py  test_fixtures.py  test_para_style_a_validators.py
(+118 files in other folders)
